--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -54,7 +54,7 @@
 				<iframe width='100%' height='100%' frameBorder='0' src='http://a.tiles.mapbox.com/v3/bulby97.map-zj10lv4w/mm/index.html?secure=1#18/48.82681/2.22268'></iframe>
 			</div>
 			<div class="copyright row">
-				<div class="medium-8 medium-centered columns">
+				<div class="medium-8 medium-centered columns clearfix">
 					<div class="medium-4 columns">
 						<strong>Kilix by Extia</strong> <br>
 						<a target="_blank" href="https://maps.google.fr/maps?q=google+maps+1+avenue+de+la+cristallerie&ie=UTF-8&hq=&hnear=0x47e67b0491111b29:0x1e40b81275175848,1+Avenue+de+la+Cristallerie,+92310+S%C3%A8vres&gl=fr&ei=S0DYUqWaOKO90QX4roHIDw&ved=0CDIQ8gEwAA">1, avenue de la Cristallerie</a>
@@ -72,9 +72,9 @@
 						<a class="enabled" data-pos="3" href="/agilite">Agilité</a>
 					</div>
 				</div>
-				<div class="large-12 columns">
-					Kilix <i class="icon-heart" data-text="est une marque"></i> Extia <br>Tous droits réservés Copyright © 2014 Kilix
-				</div>
+			</div>
+			<div class="copyright2">
+				Kilix <i class="icon-heart" data-text="est une marque"></i> Extia <br>Tous droits réservés Copyright © 2014 Kilix
 			</div>
 		</footer>
 		<!-- TODO : Par la suite le fichier mix.js générera le min.js -->
