--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -6,7 +6,7 @@
 			<div class="row">
 				<div class="large-8 columns">
 					<div class="kilix-dispatch show-for-medium-up">
-						<svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg>
+						<svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1200 200"></svg>
 					</div>
 					<h1 class='landing-main-text'>
 						Nous sommes une agence Web avec des post-it<sup>®</sup> sur les murs.<i class="icon-arrow-down4"> </i>
@@ -32,7 +32,7 @@
 					<h2><span>Gestion <span>par </span></span><span>la</span> <span>valeur</span></h2>
 					<h3>Optimiser la création de valeur</h3>
 					<p>Nous pilotons votre projet de A à Z avec vous en fonction de la valeur qu’il apportera à vos utilisateurs. Vous possédez rapidement un produit qui répond à vos besoins et ceux de votre cible.</p>
-					<a data-pos="3" data-scroll="" href="/agilite" class="button enabled">En savoir plus</a>
+					<a data-pos="3" data-scroll="1" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 				</div>
 				<div class="large-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true %}
@@ -57,7 +57,7 @@
 					<h2><span>Gestion par </span><span>les</span> <span>risques</span></h2>
 					<h3>Anticiper pour prévenir les risques</h3>
 					<p>Avec votre collaboration, nous menons dès le début du projet une analyse des risques afin de limiter les retours de vos utilisateurs et ainsi maximiser sa réussite.</p>
-					<a data-pos="3" data-scroll="" href="/agilite" class="button enabled">En savoir plus</a>
+					<a data-pos="3" data-scroll="2" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true %}
@@ -86,7 +86,7 @@
 					<h2><span>Amélioration</span><span> continue</span></h2>
 					<h3>Toujours progresser pour viser l’excellence.</h3>
 					<p>Tous les projets sont différents. Nous tirons parti de cette diversité pour apprendre et évoluer sans cesse. Ces retours d’expériences servent l’amélioration de votre produit.</p>
-					<a data-pos="3" data-scroll="" href="/agilite" class="button enabled">En savoir plus</a>
+					<a data-pos="3" data-scroll="3" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 				</div>
 				<div class="large-6 medium-6 columns anim-item">
 					{% if ress.isMobile ==  true %}
@@ -108,7 +108,7 @@
 					<h2>Extia</h2>
 					<h3>Boostez vos projets grâce à l'énergie d’Extia</h3>
 					<p>Nous nous appuyons sur l'expertise d’Extia, acteur reconnu du conseil depuis 7 ans, qui met à votre disposition ses meilleurs consultants et vous garantit l'atteinte de vos objectifs dans les délais impartis.</p>
-					<a href="http://www.extia.fr" target=_blank class="button">Accéder à Extia.fr</a>
+					<a href="http://www.extia.fr" target=_blank class="button enabled"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7  columns">
 				{% if ress.isMobile ==  true %}
