--- a/web/assets/scss/components/global.scss
+++ b/web/assets/scss/components/global.scss
@@ -57,21 +57,83 @@ p{
 a {
 	text-decoration: none;
 
+
 	&.button {
+		perspective: 1000;
 		font-family: "Source Sans Pro"; font-weight: 400;
 		transition:all .3s cubic-bezier(0.165,0.840,0.440,1.000);
-		color: white;
-		background:$primary-color;
-		border: 2px solid $primary-color;
-		
-		margin-top:2rem;
-		padding: .5em 1.1em;
-		border-radius: 3px;
-		font-size: 1.3rem;
+		background:transparent;
+		padding:0;
+		margin:0;
+		margin-top: 2rem;
 
 		&:hover{
-			color: $primary-color;
-			background: transparent;
+			background-color: transparent;
+			span{
+				transform: rotateX(91deg) translateY(-25px);
+				color:transparent;
+
+				&:after{
+					background:rgba(0,0,0,0);
+				}
+
+				&:before{
+				}
+			}
+		}
+
+		span{
+			position: relative;
+			display: inline-block;
+
+			transition: transform 0.3s, color 0.3s;
+			transform-origin: 50% 0;
+			transform-style: preserve-3d;
+
+			color: white;
+			background:$primary-color;
+			
+			line-height: 50px;
+			padding: 0 25px;
+			font-size: rem-calc(16);
+
+			border-radius: 3px;
+			backface-visibility: hidden;
+
+			&:before{
+				position: absolute;
+				color:white;
+
+				line-height: 50px;
+				padding: 0 25px;
+
+				top: 100%;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background: $col1;
+				content: attr(data-hover);
+				transition: background 0.3s;
+				transform: rotateX(-90deg);
+				transform-origin: 50% 0;
+
+				border-radius: 3px;
+				backface-visibility: hidden;
+			}
+
+			&:after{
+				position: absolute;
+				top: 100%;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				z-index: 1;
+				background: rgba(0, 0, 0, 0.8);
+				content: " ";
+				transition: background 0.3s;
+				transform: rotateX(-90deg);
+				transform-origin: 50% 0;
+			}
 		}
 	}
 
@@ -192,6 +254,10 @@ a {
 		height:rem-calc($medium-margin);
 		padding-top: rem-calc(160);
 	}
+
+	@media #{$large-up}{
+		height:rem-calc($large-margin);
+	}
 	
 	&.desktop {
 			@media #{$medium-up} {
@@ -230,7 +296,8 @@ a {
 
 		@include animateFadeToRight(1.3s);
 
-
+		font-size: 19px;
+		line-height: 31px;
 		margin-top: -4rem;
 		color:white;
 
@@ -244,6 +311,9 @@ a {
 	&.desktop {
 		@media #{$medium-up} {
 			margin-top:rem-calc($medium-margin);
+		}
+		@media #{$large-up} {
+			margin-top:rem-calc($large-margin);
 		}
 	}
 
