--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -184,6 +184,15 @@
 			font-size: rem-calc(80);
 			line-height: rem-calc(90);
 		}
+
+		sup{
+			line-height: 0px;
+			font-size: 20px;
+
+			@media #{$medium-up}{
+				font-size: 50px;
+			}
+		}
 	}
 
 	.landing-next-section-wrapper {
@@ -455,7 +464,18 @@
     transform: rotate(45deg);
     transition: all 0.2s;
     border-radius: 3px;
-	
+	overflow: hidden;
+
+	&:before{
+		content: " ";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 75%;
+		height: 180%;
+		background: rgba(255, 255, 255, 0.08);
+		transform: rotate(-45deg);
+	}
 }
 
 .losange-arrow{
