--- a/web/assets/scss/components/global.scss
+++ b/web/assets/scss/components/global.scss
@@ -15,7 +15,7 @@ body {
 
 
 h1{
-	font-family: Ubuntu;
+	font-family: Source Sans Pro;
 	font-weight: normal;
 	font-size: rem-calc(40);
 	line-height: rem-calc(48);
@@ -37,7 +37,7 @@ h1{
 }
 
 h2{
-	font-family: Ubuntu;
+	font-family: Source Sans Pro;
 	font-weight: 400;
 	font-size: rem-calc(48);
 	color: $second-color;
