--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -55,22 +55,22 @@
 			</div>
 			<div class="copyright row">
 				<div class="medium-8 medium-centered columns clearfix">
-					<div class="medium-4 columns">
+					<div class="medium-6 columns">
 						<strong>Kilix by Extia</strong> <br>
 						<a target="_blank" href="https://maps.google.fr/maps?q=google+maps+1+avenue+de+la+cristallerie&ie=UTF-8&hq=&hnear=0x47e67b0491111b29:0x1e40b81275175848,1+Avenue+de+la+Cristallerie,+92310+S%C3%A8vres&gl=fr&ei=S0DYUqWaOKO90QX4roHIDw&ved=0CDIQ8gEwAA">1, avenue de la Cristallerie</a>
 						 <br>Entrée A – 6ème étage <br>92310 SÈVRES
 					</div>
-					<div class="medium-4 columns">
+					<div class="medium-6 columns">
 						<strong>Contactez-nous</strong> <br>
 						Tél : 01 46 99 91 91 <br>
 						Fax : 01 46 99 91 90 <br>
 						<a href="mailto:contact@kilix.fr">contact@kilix.fr</a>
 					</div>
-					<div class="medium-4 columns footer-links">
+					<!-- <div class="medium-4 columns footer-links">
 						<a class="enabled" data-pos="1" href="/">Home</a><br>
 						<a class="enabled" data-pos="2" href="/team">Team</a><br>
 						<a class="enabled" data-pos="3" href="/agilite">Agilité</a>
-					</div>
+					</div> -->
 				</div>
 			</div>
 			<div class="copyright2">
