--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -221,6 +221,7 @@
 	position:relative;
 	z-index:2;
 	background:#FAFAFC;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.08);
 	// border-bottom: 5px solid rgba(85, 122, 162, 0.05);
 
 	&.svg-extia{
