Fix text, changed bg agile

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -6,8 +6,8 @@
 			<div class="row">
 				<div class="large-8 columns">
 					<h1>Notre ADN : la culture Agile <span></span><i class="icon-arrow-down4"> </i></h1>
-					<p>Pour nous, l’agilité ne se limite pas à une méthodologie de gestion de projet. C’est notre philosophie.
-Alliée aux principes de l’ amélioration continue elle nous permet d’apporter transparence, qualité et satisfaction à nos clients.</p>
+					<p>Pour nous, <strong>l’agilité</strong> ne se limite pas à une méthodologie de gestion de projet. C’est <strong>notre philosophie</strong>.
+Alliée aux principes de <strong>l'amélioration continue</strong> elle nous permet d'apporter <strong>transparence</strong>, <strong>qualité</strong> et <strong>satisfaction à nos clients.</strong></p>
 				</div>
 			</div>
 		</header>
@@ -33,9 +33,9 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 				<div class="row">
 					<div class="medium-6  columns agility-item">
 						<div class="large-12 columns">
-							<svg id="AGI-value" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
+							<svg id="AGI-value" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 						</div>
-						<!-- <div class="large-6 columns">
+						{# <div class="large-6 columns">
 							<ul>
 								<li>
 								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
@@ -59,7 +59,7 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 								</li>
 
 							</ul>
-						</div> -->
+						</div>#}
 					</div>
 
 					<div class="medium-6 columns">
@@ -74,9 +74,9 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 				<div class="row">
 				<div class="medium-6 columns agility-item">
 					<div class="large-12 columns">
-						<svg id="AGI-risk" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
+						<svg id="AGI-risk" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 					</div>
-					<!-- <div class="large-6 columns">
+					{#<div class="large-6 columns">
 						<ul>
 							<li>
 								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
@@ -95,7 +95,7 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 								Recette et validation en continu
 							</li>
 						</ul>
-					</div> -->
+					</div>#}
 				</div>
 
 				<div class="medium-6 columns">
@@ -111,9 +111,9 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 					<div class="medium-6 columns agility-item">
 						
 						<div class="large-12 columns">
-							<svg id="AGI-adapt" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
+							<svg id="AGI-adapt" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 						</div>
-						<!-- <div class="large-6 columns">
+						{#<div class="large-6 columns">
 							<ul>
 								<li>
 									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
@@ -124,7 +124,7 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 									Tolérance aux changements même tard dans le projet
 								</li>
 							</ul>
-						</div> -->
+						</div>#}
 					</div>
 
 					<div class="medium-6 columns">
@@ -140,9 +140,9 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 				<div class="row">
 				<div class="medium-6 columns agility-item">
 					<div class="large-12 columns">
-						<svg id="AGI-vis" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
+						<svg id="AGI-vis" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 					</div>
-					<!-- <div class="large-6 columns">
+					{#<div class="large-6 columns">
 						<ul>
 							<li>
 								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
@@ -157,7 +157,7 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 								Indicateurs probants (burndown et burnup)
 							</li>
 						</ul>
-					</div> -->
+					</div>#}
 				</div>
 
 				<div class="medium-6 columns">
