--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -23,7 +23,7 @@
 				</div>
 				<div class="medium-8 columns intro-content">
 					<h2>L’agence digitale Agile by EXTIA</h2>
-					<p>Une agence digitale se doit de maîtriser les différentes technologies en appliquant des contraintes simples mais très fortes : tenir ces engagements de délais, périmètre et enfin de coûts. Pour Kilix, la meilleur manière de produire vos projets est de les respecter en appliquant une stratégie Agile. Nous pilotons nos projets par la valeur, les risques et dans un souci d’amélioration continue, en  s’appuyant sur les forces de production d’Extia.</p>
+					<p>Kilix combine la maîtrise des technologies Web les plus récentes, qu’elle associe à l’expertise d’Extia en matière de conseil. Guidée par la philosohie agile, notre équipe vous accompagne sur l’ensemble de votre projet, du conseil au développement et Webdesign. Site Web, plateforme de commerce en ligne, intranet ou application mobile, Kilix saura répondre à tous vos besoins… avec Agilité !</p>
 				</div>
 			</div>
 		</section>
