--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -17,9 +17,18 @@ Mais fondamentalement, il y a vous, apportant la vision “produit”.</p>
 						<a class="teampage losange show-for-large-up"><i class="icon-arrow-down4 losange-arrow"> </i></a>
 					</div>
 					<div class="medium-8 columns intro-content">
-						<h2>Une autre approche de la relation client</h2>
-						<p>Nous croyons avec ferveur que vous êtes la pierre angulaire de l’équipe. Ensemble, nous profitons de la synergie créée par notre collaboration pour faire de votre produit une réussite. 
-Vous serez l’acteur principal de cette belle aventure, où chaque activité ajoutera de la valeur à votre produit en s'appuyant sur vos feedback.</p>
+						<h2>Vous...</h2>
+						<p>Le client est la pierre angulaire de l’équipe. Vous bénéficiez d’une <strong>visibilité totale</strong> sur votre projet à tout moment. Contrairement aux modes de gestion de projet classiques, vous accompagnez le développement de votre produit et pouvez affiner votre vision à tout moment. </p>
+						<h2>...Et nous</h2>
+						<p>
+							L’équipe de Kilix se compose d’experts reconnus qui interviennent sur tous les métiers : 
+								UX et UI Design, 
+								Référencement, 
+								Technologies front-end et back-end avant-gardistes, 
+								Analyse approfondie des tendances à venir…
+
+							La synergie ainsi créée favorise la réussite de notre aventure.
+						</p>
 					</div>
 				</div>
 		</section>
