--- a/web/assets/scss/app.scss
+++ b/web/assets/scss/app.scss
@@ -7,7 +7,7 @@
 // You can import only specific elements by adjusting the import below
 @import "foundation";
 @import "foundation/functions";
-
+//
 //Fonts
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700);
