--- a/web/assets/scss/sections/agilite.scss
+++ b/web/assets/scss/sections/agilite.scss
@@ -20,7 +20,10 @@
 	
 	@media #{$medium-up}{
 		svg{
-			margin: 100px 0;
+			margin: 80px 0;
+			padding: 20px;
+			background: rgba(0, 0, 0, 0.02);
+			border: 1px solid rgba(0, 0, 0, 0.1);
 		}
 	}
 }
