mp4 video bug fix

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -58,6 +58,7 @@
 						{% elseif ress.isMobile == true %}
 							<img src="assets/img/gif/value-small.gif" alt="">
 						{% else %}
+							<div class="video-head"></div>
 							<video src="assets/video/valeur-IE.mp4" autoplay loop></video>
 						{% endif %}
 					{% else %}
