--- a/web/assets/scss/sections/agilite.scss
+++ b/web/assets/scss/sections/agilite.scss
@@ -14,17 +14,20 @@
 	}
 	.content article{
 		border-bottom: 5px solid rgba(85, 122, 162, 0.05);
-
-		.row{max-width:65rem;}
+		padding: 80px 0;
 	}
 	
 	@media #{$medium-up}{
-		svg{
-			margin: 80px 0;
+		.svg-auto-size{
 			padding: 20px;
 			background: rgba(0, 0, 0, 0.02);
 			border: 1px solid rgba(0, 0, 0, 0.1);
 		}
+	}
+
+	.large-4.columns{
+		border: 1px solid rgba(0, 0, 0, 0.11);
+		background: rgba(230, 230, 230, 0.07);
 	}
 }
 
@@ -37,8 +40,8 @@
 		li {
 			position: relative;
 			min-height: rem-calc(25);
-			font-size: rem-calc(16);
-			line-height: rem-calc(25);
+			font-size: rem-calc(14);
+			line-height: rem-calc(17);
 			margin-bottom: rem-calc(15);
 		}
 	}
@@ -73,7 +76,7 @@
 		.checkmark {
 			path {
 				opacity: 1;
-				stroke: #43c747;
+				stroke: #e79027;
 				stroke-dashoffset: 0px;
 			}
 		}
