Fixed oups deleting after merge

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -12,7 +12,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 			</div>
 		</header>
 		<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}">
-				<div class="row">
+				{#<div class="row">
 					<div class="medium-4 columns intro-picto">
 						<a class="agilitypage losange show-for-large-up"><i class="icon-arrow-down4 losange-arrow"> </i></a>
 					</div>
@@ -25,18 +25,18 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 
 <p>Nous appliquons les principes de l’amélioration continue à tous les aspects de nos métier : methodolgies, développement, conception, design, conduite de projet et documentation afin de vous faire profiter à chaque instant du retour sur expérience de nos activités.</p>
 					</div>
-				</div>
+				</div>#}
 		</section>
 		<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
 			
 			<article>
 				<div class="row">
-					<div class="medium-6 columns">
+					<div class="medium-6 columns large-push-6">
 						<h2>Gestion par la Valeur</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
 					</div>
 
-					<div class="medium-6  columns agility-item">
+					<div class="medium-6  columns large-pull-6 agility-item">
 						<div class="large-8 columns">
 							<svg id="AGI-value" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 						</div>
@@ -105,11 +105,11 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 
 			<article>
 				<div class="row">	
-					<div class="medium-6 columns">
+					<div class="medium-6 large-push-6 columns">
 						<h2>Adaptabilité</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
 					</div>
-					<div class="medium-6 columns agility-item">
+					<div class="medium-6 large-pull-6 columns agility-item">
 						<div class="large-8 columns">
 							<svg id="AGI-adapt" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 						</div>
