--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -6,7 +6,7 @@
 			<div class="row">
 				<div class="large-8 columns">
 					<div class="kilix-dispatch show-for-medium-up">			
-						<img  x="0px" y="0px" src="assets/img/logo_big.svg" id="KILIX-logo"  viewBox="0 0 1500 200" alt="" class='svg'>
+						<img  x="0px" y="0px" src="assets/img/logo_big.svg" id="KILIX-logo"  viewBox="0 0 1500 200" alt="" class='svg play'>
 							<!-- <svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg> -->
 					</div>
 					<h1 class='landing-main-text'>
