--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -220,11 +220,10 @@
 .svg-anim{
 	position:relative;
 	z-index:2;
-	background:#ebeff2;
+	background:#ECECF5;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
 	&.svg-risque, &.svg-extia{
-		background: white;
 		.row{
 			border:0;
 		}
