increment numbers on agility graph

--- a/web/assets/scss/sections/agilite.scss
+++ b/web/assets/scss/sections/agilite.scss
@@ -7,6 +7,12 @@
 	background-image: url('../img/landing-bg-team.jpg'); background-size: cover;
 }
 
+#tps, #val{
+	font-size: 16px;
+	letter-spacing: 1px;
+	font-weight: bold;
+	fill: #61AFF0;
+}
 
 .agility-item {
 
