--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -37,10 +37,10 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 					</div>
 
 					<div class="medium-6  columns large-pull-6 agility-item">
-						<div class="large-8 columns">
+						<div class="large-8 large-push-4 columns">
 							<svg id="AGI-value" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 						</div>
-						<div class="large-4 columns">
+						<div class="large-4 large-pull-8 columns">
 							<ul>
 								<li>
 								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
@@ -110,10 +110,10 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
 					</div>
 					<div class="medium-6 large-pull-6 columns agility-item">
-						<div class="large-8 columns">
+						<div class="large-8 large-push-4 columns">
 							<svg id="AGI-adapt" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 						</div>
-						<div class="large-4 columns">
+						<div class="large-4 large-pull-8 columns">
 							<ul>
 								<li>
 									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
