--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -71,7 +71,7 @@
 }
 
 .team .intro{
-	background: $col3;
+	background: #ff4545;
 
 	.intro-picto{
 		background: url(../img/svg/team.svg) rgba(255, 255, 255, 0.1) no-repeat center center; 
@@ -213,17 +213,33 @@
 	}
 }
 
-
-
-
-
 .svg-anim{
 	position:relative;
 	z-index:2;
 	background:#ECECF5;
+	background: rgb(236,236,245); /* Old browsers */
+	background: -moz-linear-gradient(70deg,  rgba(236,236,245,1) 0%, rgba(236,236,245,1) 70%, rgba(230,230,237,1) 70%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(236,236,245,1)), color-stop(70%,rgba(236,236,245,1)), color-stop(70%,rgba(230,230,237,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 70%,rgba(230,230,237,1) 70%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 70%,rgba(230,230,237,1) 70%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 70%,rgba(230,230,237,1) 70%); /* IE10+ */
+	background: linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 70%,rgba(230,230,237,1) 70%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ececf5', endColorstr='#e6e6ed',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
 	&.svg-risque, &.svg-extia{
+
+		background:#ECECF5;
+		background: rgb(236,236,245); /* Old browsers */
+		background: -moz-linear-gradient(70deg,  rgba(236,236,245,1) 0%, rgba(236,236,245,1) 30%, rgba(230,230,237,1) 30%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(236,236,245,1)), color-stop(30%,rgba(236,236,245,1)), color-stop(30%,rgba(230,230,237,1))); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 30%,rgba(230,230,237,1) 30%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 30%,rgba(230,230,237,1) 30%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 30%,rgba(230,230,237,1) 30%); /* IE10+ */
+		background: linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 30%,rgba(230,230,237,1) 30%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ececf5', endColorstr='#e6e6ed',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
 		.row{
 			border:0;
 		}
@@ -506,7 +522,7 @@
 }
 
 .homepage.losange:hover{
-	background: #61aff0;
+	background: #ff4a46;
 }
 
 .teampage.losange:hover{
