--- a/web/assets/scss/sections/agilite.scss
+++ b/web/assets/scss/sections/agilite.scss
@@ -23,11 +23,14 @@
 
 	.large-4.columns{
 		border: 1px solid rgba(190, 190, 190, 1);
-		background: rgba(97, 175, 240, 0.69);
+		background: lighten($col1, 5%);
 		color:white;
 	}
 }
 
+article:nth-child(2) .large-4{
+	background: lighten($col2, 5%);
+}
 
 .agility-item {
 
