Changed background agile

--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -71,7 +71,7 @@
 }
 
 .team .intro{
-	background: #ff4545;
+	background: #202D3B;
 
 	.intro-picto{
 		background: url(../img/svg/team.svg) rgba(255, 255, 255, 0.1) no-repeat center center; 
