Darker text, landing text bigger, contact link like links, references darker

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -101,7 +101,7 @@
 					<h2><span>Amélioration</span><span> continue</span></h2>
 					<h3>Toujours progresser pour viser l’excellence.</h3>
 					<p>Tous les projets sont différents. Nous tirons parti de cette diversité pour apprendre et évoluer sans cesse. Ces retours d’expériences servent l’amélioration de votre produit.</p>
-					<a data-pos="3" data-scroll="2" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+					{#<a data-pos="3" data-scroll="2" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>#}
 				</div>
 				<div class="large-6 medium-6 columns anim-item">
 					{% if ress.isMobile ==  true %}
