--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -56,7 +56,7 @@
 						--><a class="mail-contact" href="mailto:contact@kilix.fr">Email</a>
 					</div>
 				</div>
-				<div class="back-to-top show-for-medium-up">
+				<div class="back-to-top show-for-large-up">
 					<i class="icon-arrow-up"></i>
 				</div>
 			</div>
