--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -1,7 +1,7 @@
 /* VARIABLES */
 $primary-color : #384047;
 $second-color: #a8b7bf;
-$text-color : #8c989e;
+$text-color : #2A414C;
 
 $col1: #61AFF0;
 $col2: #ff4a46;
