--- a/web/assets/scss/components/global.scss
+++ b/web/assets/scss/components/global.scss
@@ -49,8 +49,8 @@ h3{
 }
 
 p{
-	font-size: rem-calc(18);
-	line-height: rem-calc(28);
+	font-size: rem-calc(20);
+	line-height: rem-calc(32);
 	color: $text-color;
 }
 
@@ -286,6 +286,14 @@ a {
 		cursor: pointer;
 		position: relative;
 		z-index:1;
+		@media #{$medium-up} {
+			font-size:rem-calc(60);
+		}
+
+		@media #{$large-up} {
+			font-size:rem-calc(80);
+		}
+			
 
 		span{
 			font-size:rem-calc(30);
@@ -312,6 +320,14 @@ a {
 
 		@media #{$medium-up} {
 			width: 60%;
+			font-size: 23px;
+			line-height: 33px;
+		}
+
+		@media #{$large-up} {
+			width: 65%;
+			font-size: 28px;
+			line-height: 44px;
 		}
 	}
 }
