--- a/web/assets/scss/components/menu.scss
+++ b/web/assets/scss/components/menu.scss
@@ -187,35 +187,34 @@ $mobile-contact-height: 40;
 			@include linkedIn;
 			font-family: Ubuntu;
 			
-			color: $primary-color;
+			color: white;
 			text-transform:uppercase;
 			position: relative;
 			z-index:1;
 			font-weight: bold;
-			transition: color 0.5s;
 
-			&:hover{		
-				
-				color: white;
+			border-bottom: none;
 
-				&:after{
-					background:transparent;
+					&:after{
+					position: absolute;
+					width: 100%;
+					height: 2px;
+					bottom: 10px;
+					left: 0;
+					background: $second-color;
+					content: " ";
+					transition: 0.3s ease-out;
+					transform: translateY(0.3rem);
+					opacity:0;
 				}
-			}
 
-			&:after{
-				width: 85px;
-				height: 25px;
-				background: white;
-				z-index: -1;
-				content: " ";
-				position: absolute;
-				top: 10px;
-				left: -9px;
-				border-radius: 3px;
-				border:2px solid white;
-				transition: all 0.5s;
-			}
+				&.current, &:hover{
+					&:after{
+						transform: translateY(0);
+						opacity:1;
+					}
+				}
+
 		}
 
 		.nav-link {
@@ -336,38 +335,42 @@ $mobile-contact-height: 40;
 
 
 body.unfolded {
-	.site-wrapper {
-		transform: translateY(rem-calc($mobile-link-height*3 + $mobile-contact-height));
 
-		
-		@media #{$medium-up} {
-			transform: translateY(0);
-		}
-		.icon-folded {
-			transform:translateY(rem-calc(-35));
-		}
-		.icon-unfolded {
-			transform:translateY(rem-calc(-37));
-		}
-	}
-	.navbar {
-		transform:translateY(rem-calc($mobile-link-height*3 + $mobile-contact-height));
-		transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);			
-		@media #{$medium-up} {
-			transform:translateY(rem-calc(0));
-		}
-		.nav-links-wrapper {
-			transform: rotateX(0deg);
-
-			&:after{
-				content:" ";
-				position:absolute;
-				top:0; left:0; bottom:0; right: 0;
-				background:rgba(0,0,0,0);
-				z-index:1;
-			}
+	@media #{$small-only} {
+		.site-wrapper {
+			transform: translateY(rem-calc($mobile-link-height*3 + $mobile-contact-height));
 
 			
+			@media #{$medium-up} {
+				transform: translateY(0);
+			}
+			.icon-folded {
+				transform:translateY(rem-calc(-35));
+			}
+			.icon-unfolded {
+				transform:translateY(rem-calc(-37));
+			}
 		}
+		.navbar {
+			transform:translateY(rem-calc($mobile-link-height*3 + $mobile-contact-height));
+			transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);			
+			@media #{$medium-up} {
+				transform:translateY(rem-calc(0));
+			}
+			.nav-links-wrapper {
+				transform: rotateX(0deg);
+
+				&:after{
+					content:" ";
+					position:absolute;
+					top:0; left:0; bottom:0; right: 0;
+					background:rgba(0,0,0,0);
+					z-index:1;
+				}
+
+				
+			}
+		}
+
 	}
 }
